--- a/ComplainRequest-list.html
+++ b/ComplainRequest-list.html
@@ -150,29 +150,29 @@
                      <span class="lan-2">Problem List</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceRequest-list.html">
+                     <a class="sidebar-link" href="ComplainRequest-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Request List</span></a>
+                     <span class="lan-2">Complain Request List</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceReport-list.html">
+                     <a class="sidebar-link" href="ComplainReport-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Report</span></a>
+                     <span class="lan-2">Complain Report</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="service-status.html">
+                     <a class="sidebar-link" href="ComplainStatus.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Status</span></a>
+                     <span class="lan-2">Complain Status</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Working-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Working Service</span></a>
+                        <span class="lan-2">Working Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Completed-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Completed Service</span></a>
+                        <span class="lan-2">Completed Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Plumberlist.html">
@@ -286,7 +286,11 @@
                          <div class="pb-3">
                             <div class="d-flex justify-content-end align-items-center flex-wrap">
                                <div class="d-flex align-items-center gap-2">
-                                  <div class="text-center"><a class="btn btn-success" href="AddService.html"><i class="fa fa-plus me-3"> Add</i></a></div>
+                                  <div class="text-center ">
+                                      <a class="btn btn-success" href="AddService.html">
+                                          <i class="fa fa-plus me-2"></i> Add
+                                      </a>
+                                  </div>
                                </div>
                             </div>
                          </div>
@@ -319,7 +323,7 @@
                             <td>Continuous leak from pipe under sink</td>
                             <td>Shop No. 18, Ground Floor, Silver Plaza, Morbi</td>
                             <td>Ravi Patel</td>
-                            <td>2025-06-06</td>
+                            <td>06-07-2025</td>
                             <td> 
                               <ul class="action"> 
                                 <li class="edit badge badge-warning">
@@ -337,7 +341,7 @@
                             <td>Leaky faucet dripping continuously</td>
                             <td>Green Park Society, Block B, Rajkot</td>
                             <td>Meena Shah</td>
-                            <td>2025-06-05</td>
+                            <td>05-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
@@ -352,7 +356,7 @@
                             <td>Toilet water overflowing on flush</td>
                             <td>206, Riddhi Apartment, Surat</td>
                             <td>Karan Joshi</td>
-                            <td>2025-06-04</td>
+                            <td>04-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
@@ -367,7 +371,7 @@
                             <td>Crack in wall pipe causing damp patches</td>
                             <td>3rd Floor, Shyam Villa, Ahmedabad</td>
                             <td>Priya Desai</td>
-                            <td>2025-06-03</td>
+                            <td>03-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
@@ -382,7 +386,7 @@
                             <td>Water leaking from washing machine connection</td>
                             <td>Plot 14, Krishna Nagar, Morbi</td>
                             <td>Ramesh Vora</td>
-                            <td>2025-06-03</td>
+                            <td>03-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
@@ -397,7 +401,7 @@
                             <td>Ceiling leak during rain</td>
                             <td>Flat No. 12, Vraj Residency, Bhuj</td>
                             <td>Dipali Mehta</td>
-                            <td>2025-06-02</td>
+                            <td>02-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
@@ -412,7 +416,7 @@
                             <td>Clogged drain causing backflow</td>
                             <td>Hanuman Nagar, Street 5, Vadodara</td>
                             <td>Chirag Bhatt</td>
-                            <td>2025-06-02</td>
+                            <td>02-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
@@ -427,7 +431,7 @@
                             <td>Shower tap broken off from wall</td>
                             <td>Gokul Nagar, Main Road, Gandhinagar</td>
                             <td>Sneha Raval</td>
-                            <td>2025-06-01</td>
+                            <td>01-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
@@ -442,7 +446,7 @@
                             <td>Rusty pipe weakening water flow</td>
                             <td>Near Bus Stand, Mandvi</td>
                             <td>Parth Panchal</td>
-                            <td>2025-06-01</td>
+                            <td>01-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
@@ -457,7 +461,7 @@
                             <td>Roof pipe leak dripping in hall</td>
                             <td>Yash Tower, Sector 7, Jamnagar</td>
                             <td>Ritika Shah</td>
-                            <td>2025-05-31</td>
+                            <td>31-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
@@ -472,7 +476,7 @@
                             <td>Kitchen floor water logging due to hidden leak</td>
                             <td>Flat 5A, Shivam Heights, Rajkot</td>
                             <td>Jay Parmar</td>
-                            <td>2025-05-30</td>
+                            <td>30-07-2025</td>
                             <td>
                               <ul class="action">
                                 <li class="edit badge badge-warning"><a href="AddService.html"><i class="fa fa-pencil text-white" aria-hidden="true" title="Edit"></i></a></li>
