--- a/ComplainStatus.html
+++ b/ComplainStatus.html
@@ -150,29 +150,29 @@
                      <span class="lan-2">Problem List</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceRequest-list.html">
+                     <a class="sidebar-link" href="ComplainRequest-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Request List</span></a>
+                     <span class="lan-2">Complain Request List</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceReport-list.html">
+                     <a class="sidebar-link" href="ComplainReport-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Report</span></a>
+                     <span class="lan-2">Complain Report</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="service-status.html">
+                     <a class="sidebar-link" href="ComplainStatus.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Status</span></a>
+                     <span class="lan-2">Complain Status</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Working-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Working Service</span></a>
+                        <span class="lan-2">Working Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Completed-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Completed Service</span></a>
+                        <span class="lan-2">Completed Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Plumberlist.html">
@@ -199,7 +199,7 @@
             <div class="page-title">
               <div class="row">
                 <div class="col-6">
-                  <h4>Service Status</h4>
+                  <h4>Complain  Status</h4>
                 </div>
                 <div class="col-6">
                   <ol class="breadcrumb">
@@ -208,7 +208,7 @@
                           <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
                         </svg></a></li>
                     <!-- <li class="breadcrumb-item">Service Status</li> -->
-                    <li class="breadcrumb-item active">Service Status</li>
+                    <li class="breadcrumb-item active">Complain  Status</li>
                   </ol>
                 </div>
               </div>
@@ -330,7 +330,7 @@
                               <td>Rakesh Mehta</td>
                               <td>123, MG Road, Mumbai</td>
                               <td>Plumber A</td>
-                              <td>2025-06-01</td>
+                              <td>01-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -351,7 +351,7 @@
                               <td>Sunil Sharma</td>
                               <td>45, Park Avenue, Delhi</td>
                               <td>Plumber B</td>
-                              <td>2025-06-02</td>
+                              <td>02-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -372,7 +372,7 @@
                               <td>Priya Mehta</td>
                               <td>78, Lake View, Pune</td>
                               <td>Plumber C</td>
-                              <td>2025-06-03</td>
+                              <td>03-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -393,7 +393,7 @@
                               <td>Amit Joshi</td>
                               <td>22, Green Park, Jaipur</td>
                               <td>Plumber D</td>
-                              <td>2025-06-04</td>
+                              <td>04-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -414,7 +414,7 @@
                               <td>Rohit Desai</td>
                               <td>11, MG Road, Surat</td>
                               <td>Plumber E</td>
-                              <td>2025-06-05</td>
+                              <td>05-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -435,7 +435,7 @@
                               <td>Jyoti Singh</td>
                               <td>56, Station Road, Ahmedabad</td>
                               <td>Plumber F</td>
-                              <td>2025-06-06</td>
+                              <td>06-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -456,7 +456,7 @@
                               <td>Sunita Reddy</td>
                               <td>44, Ring Road, Hyderabad</td>
                               <td>Plumber G</td>
-                              <td>2025-06-07</td>
+                              <td>07-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -477,7 +477,7 @@
                               <td>Rajesh Kumar</td>
                               <td>19, Central Avenue, Kolkata</td>
                               <td>Plumber H</td>
-                              <td>2025-06-08</td>
+                              <td>08-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -498,7 +498,7 @@
                               <td>Preeti Shah</td>
                               <td>90, MG Road, Chennai</td>
                               <td>Plumber I</td>
-                              <td>2025-06-09</td>
+                              <td>09-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -519,7 +519,7 @@
                               <td>Vijay Kumar</td>
                               <td>32, Park Street, Bangalore</td>
                               <td>Plumber J</td>
-                              <td>2025-06-10</td>
+                              <td>10-04-2025</td>
                               <td>
                                 <ul class="action list-unstyled d-flex gap-2 m-0 justify-content-center">
                                   <li class="edit badge badge-warning" title="Edit">
@@ -557,6 +557,135 @@
             </footer>
       </div>
     </div>
+    <!-- serviceDetailsModal -->
+<div class="modal fade" id="serviceDetailsModal" tabindex="-1" aria-labelledby="serviceDetailsLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+
+      <div class="modal-header bg-primary">
+        <h5 class="modal-title text-white" id="serviceDetailsLabel">Service Details</h5>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+
+      <div class="modal-body">
+        <div class="row gy-4"> 
+
+          <!-- Media (Videos + Images) -->
+          <div class="col-md-5">
+
+            <!-- Before Video -->
+            <div>
+              <h6 class="text-muted fw-semibold">Before Video:</h6>
+              <video controls width="100%" height="200" poster="/assets/images/plumb.png" class="rounded">
+                <source src="https://cdn.shutterstock.com/shutterstock/videos/1079480894/preview/stock-footage-leaking-water-running-from-ceiling-light-fixture-due-to-burst-water-pipe.webm" type="video/webm" />
+                Your browser does not support the video tag.
+              </video>
+            </div>
+
+            <!-- After Video -->
+            <div class="mt-4">
+              <h6 class="text-muted fw-semibold">After Video:</h6>
+              <video controls width="100%" height="200" poster="/assets/images/plumb.png" class="rounded">
+                <source src="https://cdn.videvo.net/videvo_files/video/free/2016-09/large_watermarked/160826_032_Faucet_HD_1080p_preview.mp4" type="video/mp4" />
+                Your browser does not support the video tag.
+              </video>
+            </div>
+
+            <!-- Before & After Images -->
+            <div class="mt-4 text-center working-service-model-img">
+              <h6 class="text-muted fw-semibold">Before Image:</h6>
+              <img src="https://img.freepik.com/free-photo/view-fantasy-landscape-with-surreal-running-water-tap-world-water-day-awareness_23-2151182065.jpg?w=740" alt="Before Problem" class="img-fluid rounded mb-3" />
+              <h6 class="text-muted fw-semibold">After Image:</h6>
+              <img src="https://img.freepik.com/free-photo/clean-kitchen-modern-sink_53876-132107.jpg?w=740" alt="After Repair" class="img-fluid rounded" />
+            </div>
+          </div>
+
+          <!-- Details -->
+          <div class="col-md-7">
+
+            <!-- Problem Description -->
+            <h6 class="mb-2">Problem Description <span class="badge bg-danger ms-2">🔁 Re-Complaint</span></h6>
+            <p class="mb-4">Leakage problem - water leakage detected in kitchen piping causing dampness and damage.</p>
+
+            <!-- Status and Date -->
+            <table class="table table-bordered mb-4">
+              <tbody>
+                <tr>
+                  <th style="width: 150px;">Status</th>
+                  <td><span class="badge bg-warning text-dark">Pending</span></td>
+                </tr>
+                <tr>
+                  <th>Date</th>
+                  <td>05-03-2025</td>
+                </tr>
+              </tbody>
+            </table>
+
+            <!-- Customer Details -->
+            <h6 class="mb-3">Customer Details:</h6>
+            <table class="table table-bordered mb-4">
+              <tbody>
+                <tr><th style="width: 150px;">Customer Code</th><td>B7218</td></tr>
+                <tr><th>Customer Name</th><td>John Doe</td></tr>
+                <tr><th>Contact Number</th><td>+91 9876543210</td></tr>
+                <tr><th>Whatsapp Number</th><td>+91 9876543210</td></tr>
+                <tr><th>Address</th><td>123, Green Park, Mumbai, India</td></tr>
+              </tbody>
+            </table>
+
+            <!-- Plumber Details -->
+            <h6 class="mb-3">Plumber Details:</h6>
+            <table class="table table-bordered">
+              <tbody>
+                <tr><th style="width: 150px;">Name</th><td>Mr. Rajesh Kumar</td></tr>
+                <tr><th>Contact Number</th><td>+91 9123456789</td></tr>
+                <tr><th>Whatsapp Number</th><td>+91 9876543210</td></tr>
+                <tr>
+                  <th>Rating</th>
+                  <td><span class="badge bg-success">4.5 <i class="fa fa-star"></i></span></td>
+                </tr>
+              </tbody>
+            </table>
+
+            <!-- Re-Complaint History -->
+            <h6 class="text-danger fw-bold mb-3 mt-3">Re-Complaint History:</h6>
+            <div class="table-responsive mb-4">
+              <table class="table table-bordered table-hover table-sm align-middle">
+                <thead class="table-light">
+                  <tr>
+                    <th style="width: 40px;">#</th>
+                    <th style="width: 110px;">Date</th>
+                    <th>Description</th>
+                    <th style="width: 120px;">Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>15-03-2025</td>
+                    <td>Water leakage not fully resolved in kitchen pipe joint.</td>
+                    <td><span class="badge bg-warning text-dark">Re-Open</span></td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>22-03-2025</td>
+                    <td>Leakage appeared again near the sink drain.</td>
+                    <td><span class="badge bg-info text-white">Under Review</span></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
     <!-- latest jquery-->
     <script src="assets/js/jquery.min.js"></script>
     <!-- Bootstrap js-->
