--- a/Payment-History.html
+++ b/Payment-History.html
@@ -150,29 +150,29 @@
                      <span class="lan-2">Problem List</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceRequest-list.html">
+                     <a class="sidebar-link" href="ComplainRequest-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Request List</span></a>
+                     <span class="lan-2">Complain Request List</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceReport-list.html">
+                     <a class="sidebar-link" href="ComplainReport-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Report</span></a>
+                     <span class="lan-2">Complain Report</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="service-status.html">
+                     <a class="sidebar-link" href="ComplainStatus.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Status</span></a>
+                     <span class="lan-2">Complain Status</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Working-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Working Service</span></a>
+                        <span class="lan-2">Working Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Completed-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Completed Service</span></a>
+                        <span class="lan-2">Completed Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Plumberlist.html">
@@ -228,7 +228,7 @@
                             <td>₹2,000</td>
                             <td>₹1,500</td>
                             <td>₹500</td>
-                            <td>2025-06-01</td>
+                            <td>01-02-2025</td>
                             <td>Partial payment received</td>
                           </tr>
                           <tr>
@@ -236,7 +236,7 @@
                             <td>₹1,200</td>
                             <td>₹1,200</td>
                             <td>₹0</td>
-                            <td>2025-06-02</td>
+                            <td>02-02-2025</td>
                             <td>Full payment done</td>
                           </tr>
                           <tr>
@@ -244,7 +244,7 @@
                             <td>₹1,500</td>
                             <td>₹1,000</td>
                             <td>₹500</td>
-                            <td>2025-06-03</td>
+                            <td>03-02-2025</td>
                             <td>Balance pending</td>
                           </tr>
                           <tr>
@@ -252,7 +252,7 @@
                             <td>₹2,500</td>
                             <td>₹2,500</td>
                             <td>₹0</td>
-                            <td>2025-06-04</td>
+                            <td>04-02-2025</td>
                             <td>Paid via UPI</td>
                           </tr>
                           <tr>
@@ -260,7 +260,7 @@
                             <td>₹3,000</td>
                             <td>₹1,500</td>
                             <td>₹1,500</td>
-                            <td>2025-06-05</td>
+                            <td>05-02-2025</td>
                             <td>EMI mode</td>
                           </tr>
                           <tr>
@@ -268,7 +268,7 @@
                             <td>₹750</td>
                             <td>₹750</td>
                             <td>₹0</td>
-                            <td>2025-06-06</td>
+                            <td>06-02-2025</td>
                             <td>Cash received</td>
                           </tr>
                           <tr>
@@ -276,7 +276,7 @@
                             <td>₹4,000</td>
                             <td>₹3,000</td>
                             <td>₹1,000</td>
-                            <td>2025-06-07</td>
+                            <td>07-02-2025</td>
                             <td>Pending cheque clearance</td>
                           </tr>
                           <tr>
@@ -284,7 +284,7 @@
                             <td>₹1,800</td>
                             <td>₹1,800</td>
                             <td>₹0</td>
-                            <td>2025-06-08</td>
+                            <td>08-02-2025</td>
                             <td>Paid in full</td>
                           </tr>
                           <tr>
@@ -292,7 +292,7 @@
                             <td>₹2,200</td>
                             <td>₹1,200</td>
                             <td>₹1,000</td>
-                            <td>2025-06-08</td>
+                            <td>08-02-2025</td>
                             <td>Customer promised balance in 3 days</td>
                           </tr>
                           <tr>
@@ -300,7 +300,7 @@
                             <td>₹900</td>
                             <td>₹900</td>
                             <td>₹0</td>
-                            <td>2025-06-09</td>
+                            <td>09-02-2025</td>
                             <td>Final payment</td>
                           </tr>
                         </tbody>
