--- a/Plumber-add.html
+++ b/Plumber-add.html
@@ -147,29 +147,29 @@
                      <span class="lan-2">Problem List</span></a>
                   </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceRequest-list.html">
+                     <a class="sidebar-link" href="ComplainRequest-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Request List</span></a>
+                     <span class="lan-2">Complain Request List</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceReport-list.html">
+                     <a class="sidebar-link" href="ComplainReport-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Report</span></a>
+                     <span class="lan-2">Complain Report</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="service-status.html">
+                     <a class="sidebar-link" href="ComplainStatus.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Status</span></a>
+                     <span class="lan-2">Complain Status</span></a>
                   </li>
                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="Working-Service.html">
                   <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Working Service</span></a>
+                  <span class="lan-2">Working Complain </span></a>
                 </li> 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="Completed-Service.html">
                   <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Completed Service</span></a>
+                  <span class="lan-2">Completed Complain </span></a>
                 </li> 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="Plumberlist.html">
