--- a/Problem-list.html
+++ b/Problem-list.html
@@ -150,29 +150,29 @@
                      <span class="lan-2">Problem List</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceRequest-list.html">
+                     <a class="sidebar-link" href="ComplainRequest-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Request List</span></a>
+                     <span class="lan-2">Complain Request List</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceReport-list.html">
+                     <a class="sidebar-link" href="ComplainReport-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Report</span></a>
+                     <span class="lan-2">Complain Report</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="service-status.html">
+                     <a class="sidebar-link" href="ComplainStatus.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Status</span></a>
+                     <span class="lan-2">Complain Status</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Working-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Working Service</span></a>
+                        <span class="lan-2">Working Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Completed-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Completed Service</span></a>
+                        <span class="lan-2">Completed Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Plumberlist.html">
@@ -229,7 +229,11 @@
                          <div class="pb-3">
                             <div class="d-flex justify-content-end align-items-center flex-wrap">
                                <div class="d-flex align-items-center gap-2">
-                                  <div class="text-center"><a class="btn btn-success" href="Problem-add.html"><i class="fa fa-plus me-3"> Add</i></a></div>
+                                  <div class="text-center ">
+                                      <a class="btn btn-success" href="Problem-add.html">
+                                          <i class="fa fa-plus me-2"></i> Add
+                                      </a>
+                                  </div>  
                                </div>
                             </div>
                          </div>
@@ -257,7 +261,7 @@
                                   <li class="edit badge badge-warning">
                                     <a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a>
                                   </li>
-                                  <li class="delete badge badge-info">
+                                  <li class="delete badge badge-danger">
                                     <a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a>
                                   </li>
                                 </ul>
@@ -270,7 +274,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
@@ -281,7 +285,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
@@ -292,7 +296,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
@@ -303,7 +307,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
@@ -314,7 +318,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
@@ -325,7 +329,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
@@ -336,7 +340,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
@@ -347,7 +351,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
@@ -358,7 +362,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
@@ -369,7 +373,7 @@
                               <td> 
                                 <ul class="action"> 
                                   <li class="edit badge badge-warning"><a href="Problem-add.html"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                  <li class="delete badge badge-info"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
+                                  <li class="delete badge badge-danger"><a href="#"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
                                 </ul>
                               </td>
                             </tr>
