--- a/navbar.html
+++ b/navbar.html
@@ -150,24 +150,24 @@
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
                   <i class="fa fa-newspaper-o text-white" aria-hidden="true"></i>
-                  <span class="lan-5">Service</span></a>
+                  <span class="lan-5">Complain </span></a>
                   <ul class="sidebar-submenu">
                     
-                     <li><a href="ServiceRequest-list.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i>  Service Request List</a></li>
+                     <li><a href="ComplainRequest-list.html"><i class="fa fa-plus-square text-white me-2" aria-hidden="true"></i>  Complain  Request List</a></li>
                     
-                    <li><a href="ServiceReport-list.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Service Report</a></li>
-                        <li><a href="service-status.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Service Status</a></li>
+                    <li><a href="ComplainReport-list.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Complain  Report</a></li>
+                        <li><a href="ComplainStatus.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Complain Status</a></li>
                   </ul>
                 </li>
                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="Working-Service.html">
                   <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Working Service</span></a>
+                  <span class="lan-2">Working Complain </span></a>
                 </li> 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="Completed-Service.html">
                   <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Completed Service</span></a>
+                  <span class="lan-2">Completed Complain </span></a>
                 </li> 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="Plumberlist.html">
