--- a/Completed-Service.html
+++ b/Completed-Service.html
@@ -150,29 +150,29 @@
                      <span class="lan-2">Problem List</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceRequest-list.html">
+                     <a class="sidebar-link" href="ComplainRequest-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Request List</span></a>
+                     <span class="lan-2">Complain Request List</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ServiceReport-list.html">
+                     <a class="sidebar-link" href="ComplainReport-list.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Report</span></a>
+                     <span class="lan-2">Complain Report</span></a>
                   </li>
                   <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="service-status.html">
+                     <a class="sidebar-link" href="ComplainStatus.html">
                      <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Service Status</span></a>
+                     <span class="lan-2">Complain Status</span></a>
                   </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Working-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Working Service</span></a>
+                        <span class="lan-2">Working Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Completed-Service.html">
                         <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Completed Service</span></a>
+                        <span class="lan-2">Completed Complain </span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                         <a class="sidebar-link" href="Plumberlist.html">
@@ -337,8 +337,8 @@
                               <td>Ravi Patel</td>
                               <td>12, Green Park, Surat</td>
                               <td>Jay Soni</td>
-                              <td>2025-06-01</td>
-                              <td>2025-06-08</td>
+                              <td>01-01-2025</td>
+                              <td>08-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -356,8 +356,8 @@
                               <td>Kavita Mehta</td>
                               <td>7, Lake View, Rajkot</td>
                               <td>Harsh Modi</td>
-                              <td>2025-06-02</td>
-                              <td>2025-06-12</td>
+                              <td>02-01-2025</td>
+                              <td>12-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -375,8 +375,8 @@
                               <td>Rahul Desai</td>
                               <td>Flat 204, Sunrise Apt, Morbi</td>
                               <td>Manav Thakkar</td>
-                              <td>2025-06-03</td>
-                              <td>2025-06-23</td>
+                              <td>03-01-2025</td>
+                              <td>23-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -394,8 +394,8 @@
                               <td>Neha Shah</td>
                               <td>56, Pearl City, Ahmedabad</td>
                               <td>Ronak Mehta</td>
-                              <td>2025-06-04</td>
-                              <td>2025-06-10</td>
+                              <td>04-01-2025</td>
+                              <td>10-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -413,8 +413,8 @@
                               <td>Viral Bhatt</td>
                               <td>98, Riverdale Society, Vadodara</td>
                               <td>Darshan Shah</td>
-                              <td>2025-06-05</td>
-                              <td>2025-06-15</td>
+                              <td>05-01-2025</td>
+                              <td>15-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -432,8 +432,8 @@
                               <td>Sanjay Rana</td>
                               <td>Flat B3, Sai Residency, Bhavnagar</td>
                               <td>Chirag Vyas</td>
-                              <td>2025-06-06</td>
-                              <td>2025-06-11</td>
+                              <td>06-01-2025</td>
+                              <td>11-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -451,8 +451,8 @@
                               <td>Pinal Joshi</td>
                               <td>Block 4A, Amrapali, Jamnagar</td>
                               <td>Jay Soni</td>
-                              <td>2025-06-07</td>
-                              <td>2025-06-13</td>
+                              <td>07-01-2025</td>
+                              <td>13-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -470,8 +470,8 @@
                               <td>Manisha Chauhan</td>
                               <td>1st Floor, Sun Tower, Junagadh</td>
                               <td>Ronak Mehta</td>
-                              <td>2025-06-08</td>
-                              <td>2025-06-18</td>
+                              <td>08-01-2025</td>
+                              <td>18-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -489,8 +489,8 @@
                               <td>Hardik Shah</td>
                               <td>Om Plaza, Bharuch</td>
                               <td>Harsh Modi</td>
-                              <td>2025-06-08</td>
-                              <td>2025-06-20</td>
+                              <td>08-01-2025</td>
+                              <td>20-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -508,8 +508,8 @@
                               <td>Komal Bhatt</td>
                               <td>5B, Galaxy Heights, Vapi</td>
                               <td>Chirag Vyas</td>
-                              <td>2025-06-08</td>
-                              <td>2025-06-15</td>
+                              <td>08-01-2025</td>
+                              <td>15-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -527,8 +527,8 @@
                               <td>Ramesh Dholakia</td>
                               <td>22, Dream Valley, Mehsana</td>
                               <td>Darshan Shah</td>
-                              <td>2025-06-08</td>
-                              <td>2025-06-26</td>
+                              <td>08-01-2025</td>
+                              <td>26-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -546,8 +546,8 @@
                               <td>Jignesh Kapadia</td>
                               <td>Hill View, Palanpur</td>
                               <td>Manav Thakkar</td>
-                              <td>2025-06-08</td>
-                              <td>2025-06-17</td>
+                              <td>08-01-2025</td>
+                              <td>17-01-2025</td>
                               <td>
                                 <ul class="action"> 
                                   <li class="delete badge badge-info"><a href="#"  data-bs-toggle="modal"   data-bs-target="#serviceDetailsModal" ><i class="fa fa-eye text-white" aria-hidden="true" title="View"></i></a></li>
@@ -638,7 +638,7 @@
                 </tr>
                 <tr>
                   <th>Date</th>
-                  <td>2025-06-05</td>
+                  <td>05-01-2025</td>
                 </tr>
               </tbody>
             </table>
